--- a/packages/ckeditor5-link/lang/contexts.json
+++ b/packages/ckeditor5-link/lang/contexts.json
@@ -4,5 +4,7 @@
 	"Link URL": "Label for the URL input in the Link URL editing balloon.",
 	"Edit link": "Button opening the Link URL editing balloon.",
 	"Open link in new tab": "Button opening the link in new browser tab.",
-	"This link has no URL": "Label explaining that a link has no URL set (the URL is empty)."
+	"This link has no URL": "Label explaining that a link has no URL set (the URL is empty).",
+	"Open link in a new tab": "One of the commonly used labels in manual decorators determines if given link can be opened in a new tab",
+	"Downloadable": "One of the commonly used labels in manual decorators determines if given link should be treat as link to download resources."
 }
