--- a/packages/ckeditor5-heading/lang/translations/az.po
+++ b/packages/ckeditor5-heading/lang/translations/az.po
@@ -42,12 +42,12 @@ msgstr "Başlıq 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "Başlıq 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "Başlıq 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "Başlıq 6"
