--- a/packages/ckeditor5-table/lang/contexts.json
+++ b/packages/ckeditor5-table/lang/contexts.json
@@ -64,9 +64,9 @@
 	"Insert a new table row (when in the last cell of a table)": "Keystroke description for assistive technologies: keystroke for inserting a new table row.",
 	"Navigate through the table": "Keystroke description for assistive technologies: keystroke for navigating through the table.",
 	"Table": "The accessible label of the menu bar button that displays a user interface to insert a table into editor content.",
-	"Table layout": "The accessible label of the menu bar or dropdown button that displays a user interface to insert a table layout into editor content.",
-	"Table content": "The accessible label of the menu bar or dropdown button that displays a user interface to insert table content into editor.",
-	"Choose table type": "The accessible label of the table ballon button that displays a user interface to choose table type.",
-	"Table type": "The accessible label of the table balloon button shown when the button of properties plugin is not present.",
+	"Table layout": "The accessible label of the table layout insert UI element.",
+	"Table content": "The accessible label of the table content insert UI element.",
+	"Choose table type": "The accessible label of the table balloon button that displays a user interface to choose table type.",
+	"Table type": "The accessible label of the table type toolbar button.",
 	"Table type options": "The accessible label of dropdown list that displays a user interface to choose table type."
 }
