--- a/packages/ckeditor5-table/lang/contexts.json
+++ b/packages/ckeditor5-table/lang/contexts.json
@@ -1,5 +1,6 @@
 {
 	"Insert table": "Label for the insert table toolbar button.",
+	"Insert table layout": "Label for the insert table layout toolbar button.",
 	"Header column": "Label for the set/unset table header column button.",
 	"Insert column left": "Label for the insert table column to the left of the current one button.",
 	"Insert column right": "Label for the insert table column to the right of the current one button.",
@@ -62,5 +63,11 @@
 	"Move the selection to the previous cell": "Keystroke description for assistive technologies: keystroke for moving the selection to the previous cell.",
 	"Insert a new table row (when in the last cell of a table)": "Keystroke description for assistive technologies: keystroke for inserting a new table row.",
 	"Navigate through the table": "Keystroke description for assistive technologies: keystroke for navigating through the table.",
-	"Table": "The accessible label of the menu bar button that displays a user interface to insert a table into editor content."
+	"Table": "The accessible label of the menu bar button that displays a user interface to insert a table into editor content.",
+	"Table layout": "The accessible label used in the table layout insert UI element.",
+	"Layout table": "The accessible label of the layout table type dropdown button.",
+	"Content table": "The accessible label of the content table type dropdown button.",
+	"Choose table type": "The accessible label of the table balloon button that displays a user interface to choose table type.",
+	"Table type": "The accessible label of the table type toolbar button.",
+	"Table type options": "The accessible label of dropdown list that displays a user interface to choose table type."
 }
